[ADD] 兼容JDK1.8